add sort_link_header on results page

--- a/app/views/reporting/results/index.html.haml
+++ b/app/views/reporting/results/index.html.haml
@@ -3,7 +3,7 @@
   %tr
     - @fields.each do |field|
       %th
-        = (field[:title] || field[:name])
+        = sort_link @q, (field[:title] || field[:name])
         
   - @results.each do |result|
     %tr
