--- a/app/views/reporting/filters/_filter_group.html.haml
+++ b/app/views/reporting/filters/_filter_group.html.haml
@@ -17,6 +17,6 @@
     - else
       %div
         = search_form.label "#{field.title}" rescue nil
-        = search_form.collection_select "#{field.name}_eq", field.lookup_table.data_model.all, :id, "#{field.lookup_table.display_field_name}", include_blank: true
+        = search_form.collection_select "#{field.name}_in", field.lookup_table.data_model.all, :id, "#{field.lookup_table.display_field_name}", {:multiple => true}
 
 
