--- a/app/views/reporting/reports/_list.html.haml
+++ b/app/views/reporting/reports/_list.html.haml
@@ -1,6 +1,6 @@
 %h4
   Report Name
-- report_id = report_id || 0
+- report_id ||= 0
 %select.reporting-reports-list{onChange:"window.location.href=this.value"}
   - reports.each do |report|
     - if report.id == report_id
@@ -9,5 +9,6 @@
     - else
       %option{value: "#{report_path(report)}"}
         = report.name
+
 
   
