--- a/app/views/reporting/filters/_filter_group.html.haml
+++ b/app/views/reporting/filters/_filter_group.html.haml
@@ -1,22 +1,34 @@
 - if filter_group && search_form
-  %h5
-    = filter_group.name
-  - fields = filter_group.filter_fields.where(report: report)
-  - fields.each do |field|
-    - if !field.lookup_table
-      - if field.filter_type.name == 'range'
-        %div
-          = search_form.label "#{field.title}" rescue nil
-          = search_form.search_field "#{field.name}_gteq" rescue nil
-          = "-"
-          = search_form.search_field "#{field.name}_lteq" rescue nil
+  - filter_group_id = filter_group.id
+  - fields = filter_group.filter_fields.order(:sort_order, :id)
+
+  %div
+    %h5
+      = filter_group.name
+
+
+    - fields.each do |field|
+    
+      - if !field.lookup_table
+        
+        - field_type = report.data_model.columns_hash[field.name].type rescue nil
+        - field_class = ''
+        - if !field.value_type.blank? && field.value_type.to_sym == :time
+          - field_class += ' is-time-field'
+        - elsif field_type == :date or field_type == :datetime
+          - field_class += ' is-date-field'
+          - is_date_field = true
+
+        - if field.filter_type.name == Reporting::FilterType::RANGE
+          = render partial: 'reporting/filters/range_filter', locals: {search_form: search_form, field: field, is_date_field: is_date_field, field_class: field_class, field_type: field_type}
+        
+        - else
+          = render partial: 'reporting/filters/regular_filter', locals: {search_form: search_form, field: field, is_date_field: is_date_field, field_class: field_class, field_type: field_type}
+      
       - else
-        %div
-          = search_form.label "#{field.name}_#{field.filter_type.name}" rescue nil
-          = search_form.search_field "#{field.name}_#{field.filter_type.name}" rescue nil
-    - else
-      %div
-        = search_form.label "#{field.title}" rescue nil
-        = search_form.collection_select "#{field.name}_in", field.lookup_table.data_model.all, :id, "#{field.lookup_table.display_field_name}", {:multiple => true}
+        = render partial: 'reporting/filters/lookup_table_filter', locals: {search_form: search_form, field: field}
+    
+      = button_tag t(:reset_filter_panel), type: 'button', class: 'reset-filter-panel'
+            
 
 
