--- a/app/views/reporting/reports/show.html.haml
+++ b/app/views/reporting/reports/show.html.haml
@@ -1,5 +1,5 @@
-%h1
-  Report Parameters
+= render partial: 'header'
+
 = render partial: 'list', locals: {reports: @reports, report_id: @report.id}
 
 = render partial: 'reporting/filters/form', locals: {report: @report, filter_groups: @filter_groups}
