--- a/app/views/reporting/filters/_filter_group.html.haml
+++ b/app/views/reporting/filters/_filter_group.html.haml
@@ -2,7 +2,7 @@
   - filter_group_id = filter_group.id
   - fields = filter_group.filter_fields.order(:sort_order, :id)
 
-  %div
+  %div.filter-group
     %h5
       = filter_group.name
 
@@ -10,25 +10,18 @@
     - fields.each do |field|
     
       - if !field.lookup_table
-        
-        - field_type = report.data_model.columns_hash[field.name].type rescue nil
-        - field_class = ''
-        - if !field.value_type.blank? && field.value_type.to_sym == :time
-          - field_class += ' is-time-field'
-        - elsif field_type == :date or field_type == :datetime
-          - field_class += ' is-date-field'
-          - is_date_field = true
 
         - if field.filter_type.name == Reporting::FilterType::RANGE
-          = render partial: 'reporting/filters/range_filter', locals: {search_form: search_form, field: field, is_date_field: is_date_field, field_class: field_class, field_type: field_type}
+          = render partial: 'reporting/filters/range_filter', locals: {search_form: search_form, field: field}
         
         - else
-          = render partial: 'reporting/filters/regular_filter', locals: {search_form: search_form, field: field, is_date_field: is_date_field, field_class: field_class, field_type: field_type}
+          = render partial: 'reporting/filters/regular_filter', locals: {search_form: search_form, field: field}
       
       - else
         = render partial: 'reporting/filters/lookup_table_filter', locals: {search_form: search_form, field: field}
-    
-      = button_tag t(:reset_filter_panel), type: 'button', class: 'reset-filter-panel'
+      %br
+    %br
+    = button_tag t(:reset_filter_panel), type: 'button', class: 'reset-filter-panel'
             
 
 
