--- a/app/views/reporting/filters/_lookup_table_filter.html.haml
+++ b/app/views/reporting/filters/_lookup_table_filter.html.haml
@@ -1,5 +1,4 @@
 = search_form.label "#{field.title || field.name}" rescue nil
 - lookup_table = field.lookup_table
 - lookup_table.data_model.reset_column_information if lookup_table
-- lookup_table_data = filter_lookup_table_data(lookup_table)
-= search_form.collection_select "#{field.name}_in", lookup_table_data, "#{lookup_table.id_field_name}", "#{lookup_table.display_field_name}", {:include_blank => field.filter_type.name != Reporting::FilterType::MULTI_SELECT}, {:multiple => field.filter_type.name == Reporting::FilterType::MULTI_SELECT}
+= search_form.collection_select "#{field.name}_in", lookup_table.data_model.all.uniq, "#{lookup_table.id_field_name}", "#{lookup_table.display_field_name}", {:include_blank => true}, {class: 'filter-item', :multiple => field.filter_type.name == Reporting::FilterType::MULTI_SELECT}
